# RiNS-Robot

./: README.md
task2/: CMakeLists.txt  package.xml
task2/launch/: base.launch  services.launch  task.launch
task2/maps/: good_map.pgm  good_map1.pgm
task2/msg/: Cylinder.msg  Points_visited.msg  Ring.msg
task2/scripts/: approache.py  autonomous_navigation_GUI.py  autonomous_navigation_service.py  cylinder_inspect.py  detect_rings.py  face_id.py  findFaces.py  image_recognition.py  main.py  main2.py  park_control.py  voice_recognition.py
task2/src/: cylinder_segmentation.cpp
task2/srv/: CylinderInspect.srv  FaceRecognition.srv  GiveGoal.srv  ImageRecognition.srv  VoiceRecognition.srv
tasks/: CMakeLists.txt  package.xml
tasks/launch/: task.launch
tasks/scripts/: findFaces.py  main.py
